--- a/source/network/network.vcxproj.filters
+++ b/source/network/network.vcxproj.filters
@@ -27,10 +27,10 @@
     <ClCompile Include="utility.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="interfaces_of_tiny_socket.cpp">
+    <ClCompile Include="lan_neighbor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="lan_neighbor.cpp">
+    <ClCompile Include="tiny_socket_message.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -50,10 +50,10 @@
     <ClInclude Include="utility.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="interfaces_of_tiny_socket.h">
+    <ClInclude Include="lan_neighbor.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="lan_neighbor.h">
+    <ClInclude Include="tiny_socket_message.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
