--- a/src/w2x_common/w2x_common.vcxproj
+++ b/src/w2x_common/w2x_common.vcxproj
@@ -114,7 +114,6 @@
   <ItemGroup>
     <ClInclude Include="base.h" />
     <ClInclude Include="command.h" />
-    <ClInclude Include="common.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="encode.h" />
     <ClInclude Include="error.h" />
@@ -136,6 +135,7 @@
     <ClInclude Include="thread.h" />
     <ClInclude Include="variable.h" />
     <ClInclude Include="version.h" />
+    <ClInclude Include="w2x_common.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="base.cpp" />
