--- a/src/w2x_common/w2x_common.vcxproj.filters
+++ b/src/w2x_common/w2x_common.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="common.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="debug.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -85,6 +82,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="file_sys.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="w2x_common.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
